--- a/SkhuCalcApp/.classpath
+++ b/SkhuCalcApp/.classpath
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
-	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
-	<classpathentry kind="lib" path="C:/Users/LG/Desktop/libs/android-support-v4.jar"/>
-	<classpathentry kind="lib" path="C:/Users/LG/Desktop/libs/jackson-annotations-2.4.3.jar"/>
-	<classpathentry kind="lib" path="C:/Users/LG/Desktop/libs/jackson-core-2.4.3.jar"/>
-	<classpathentry kind="lib" path="C:/Users/LG/Desktop/libs/jackson-databind-2.4.3.jar"/>
+	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
+	<classpathentry exported="true" kind="lib" path="libs/android-support-v4.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/jackson-annotations-2.4.3.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/jackson-core-2.4.3.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/jackson-databind-2.4.3.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
