--- a/SkhuCalcApp/.classpath
+++ b/SkhuCalcApp/.classpath
@@ -3,11 +3,11 @@
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
-	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry exported="true" kind="lib" path="libs/android-support-v4.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/jackson-annotations-2.4.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/jackson-core-2.4.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/jackson-databind-2.4.3.jar"/>
+	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
