--- a/SkhuCalcApp/.settings/org.eclipse.core.resources.prefs
+++ b/SkhuCalcApp/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
 encoding//src/com/skhu/skhucalcapp/activity/MainActivity.java=UTF-8
+encoding//src/com/skhu/skhucalcapp/db/SkhuDBAdmin.java=UTF-8
 encoding//src/com/skhu/skhucalcapp/db/SkhuDBHelper.java=UTF-8
